--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
 name = "aura"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2024"
 
 [dependencies]
 crossterm = "*"
 libc = "*"
+shell-words = "*"
+shellexpand = "*"
